assertions about chars without style contexts, b=353876, r+sr=roc